# screensaver.planestate

./: CMakeLists.txt
screensaver.planestate/: addon.xml  addon.xml.in
screensaver.planestate/resources/: settings.xml
screensaver.planestate/resources/language/English/: strings.po
src/: .background.cpp.swp  .background.h.swp  animatorfloat.cpp  animatorfloat.h  background.cpp  background.h  main.cpp  main.h  planestate.cpp  planestate.h  types.h
